--- a/styles.css
+++ b/styles.css
@@ -30,7 +30,7 @@ header {
 
 .top {
     width: 100vw; 
-    height: 100vh; 
+    height:100vh; 
     background: url('man-7155142.jpg') no-repeat center center/cover;
 }
 
@@ -85,7 +85,7 @@ nav {
 }
 
 .nav-links a:hover {
-    color: #2E8B57;
+    color: #00b381;
 }
 
 .underline{
@@ -121,11 +121,10 @@ nav {
     justify-content: center;
     align-items: center;
     text-align: center;
-    width:100%;
-    height:100%;
+
 }
 
-.main-body h1{
+.main-body h1 {
     position: absolute;
     top:40%;
     left:10%;
@@ -134,5 +133,40 @@ nav {
     text-decoration: none;
     font-weight: bold;
     transition: color 0.3s;
-    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3); /* Add text shadow */
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
+}
+
+.main-body p{
+    position: absolute;
+    top:51%;
+    left:11%;
+    color: #00845e;
+    font-size: 25px;
+    text-decoration: none;
+    font-weight: bold;
+}
+
+.section2{
+    width:100%;
+    height:auto;
+}
+
+h1{
+    color: #ffffff;
+    font-size: 65px;
+    text-decoration: none;
+    font-weight: bold;
+    transition: color 0.3s;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
+    margin:10px;
+}
+
+h2{
+    color: #ffffff;
+    font-size: 45px;
+    text-decoration: none;
+    font-weight: bold;
+    transition: color 0.3s;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
+    margin:10px;
 }
