--- a/styles.css
+++ b/styles.css
@@ -711,3 +711,404 @@ h2{
     transition: color 0.3s;
     gap: 10px;
 }
+
+.section7{
+    width: 100vw;
+    padding: 50px;
+    background-color: #ffffff;
+}
+
+.section7 h2 {
+    color: #2d6a4f;
+    font-size: 42px;
+    font-weight: bold;
+    text-align: left;
+    margin-bottom: 30px;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.1);
+    padding-left: 50px;
+}
+
+.section7 p {
+    color: #434242;
+    font-size: 18px;
+    line-height: 1.6;
+    text-align: justify;
+    margin-bottom: 20px;
+    width: 70%; /* Ensure the text takes up 60% of the width */
+    padding-left: 80px;
+
+}
+
+.photo-gallery {
+    padding: 50px;
+    background-color: #ffffff;
+}
+
+.gallery {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap:2px;
+
+}
+
+.gallery-item {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.hexagon {
+    position: relative;
+    width: 350px;
+    height: 300px;
+    overflow: hidden;
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+    box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3);
+}
+
+.hexagon img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    transition: transform 0.5s ease;
+}
+
+.hexagon:hover {
+    transform: translateY(-10px);
+    box-shadow: 0 8px 20px rgba(0, 0, 0, 0.5);
+}
+
+.hexagon:hover img {
+    transform: scale(1.1);
+}
+
+
+.section8 {
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    padding: 50px 20px;
+    background-color: #c0ffe1;
+    width: 100vw;
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: row;
+}
+
+.section8 img {
+    max-width: 40%;
+    height: auto;
+    border-radius: 10px;
+    box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.2);
+    margin-bottom: 20px;
+}
+
+.section8 h3 {
+    font-size: 2rem;
+    color: #2d6a4f;
+    margin: 20px 0;
+    text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.1);
+}
+
+.section8 p {
+    font-size: 1.2rem;
+    color: #333;
+    max-width: 600px;
+    margin: 0 auto 30px;
+    line-height: 1.6;
+}
+
+.volunteer-btn {
+    font-size: 1.2rem;
+    color: #fff;
+    background-color: #2d6a4f;
+    border: none;
+    padding: 15px 30px;
+    border-radius: 5px;
+    cursor: pointer;
+    text-decoration: none;
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
+    transition: background-color 0.3s ease, box-shadow 0.3s ease;
+}
+
+.volunteer-btn:hover {
+    background-color: #52b788;
+    box-shadow: 0px 6px 15px rgba(0, 0, 0, 0.2);
+}
+
+
+.section9 {
+    width: 100vw;
+    padding: 50px;
+    background-color: #ffffff;
+}
+
+.section9 h2 {
+    color: #2d6a4f;
+    font-size: 42px;
+    font-weight: bold;
+    text-align: left;
+    margin-bottom: 30px;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.1);
+    padding-left: 50px;
+}
+
+.section9 p {
+    color: #666666;
+    font-size: 18px;
+    margin-bottom: 40px;
+    line-height: 1.6;
+    max-width: 85%;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.volunteers {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 30px;
+}
+
+.volunteer {
+    background-color: #ffffff;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    width: calc(25% - 30px);
+    padding: 20px;
+    transition: transform 0.3s ease;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+
+}
+
+.volunteer:hover {
+    transform: translateY(-10px);
+}
+
+.volunteer-img img {
+    width: 70%;
+    height: auto;
+    border-radius: 35%;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+}
+
+.volunteer-txt h6 {
+    color: #333333;
+    font-size: 20px;
+    margin-top: 15px;
+    font-weight: 600;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+}
+
+
+
+.section10 {
+    width: 100vw;
+    padding: 30px 80px;
+    background-color: #f3f3f3;
+}
+
+.section10 h3 {
+    font-size: 36px;
+    color: #2d6a4f;
+    margin-bottom: 20px;
+    font-weight: bold;
+}
+
+.section10 p {
+    font-size: 18px;
+    color: #555;
+    margin: 10px 0 30px 30px ;
+}
+
+.contact-info {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: flex-start;
+    margin-bottom: 20px;
+    padding: 0 10%;
+}
+
+.address, .map {
+    flex: 1;
+    max-width: 45%;
+    margin-bottom: 20px;
+}
+
+.address h3, .map h3 {
+    font-size: 24px;
+    color: #333;
+    margin-bottom: 10px;
+}
+
+.address p {
+    font-size: 16px;
+    color: #666;
+    line-height: 1.6;
+}
+
+.contact-form {
+    max-width: 800px;
+    margin: 0 auto;
+}
+
+.form-group {
+    margin-bottom: 20px;
+}
+
+.form-group-half {
+    width: 48%;
+    display: inline-block;
+}
+
+.form-group-half label {
+    display: block;
+    margin-bottom: 5px;
+    font-size: 16px;
+    color: #333;
+}
+
+.form-group-half input, 
+.form-group textarea {
+    width: 100%;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    font-size: 16px;
+    color: #333;
+}
+
+.form-group textarea {
+    resize: vertical;
+    min-height: 100px;
+}
+
+.submit-btn {
+    background-color: #2d6a4f;
+    color: #fff;
+    padding: 15px;
+    border: none;
+    border-radius: 5px;
+    font-size: 18px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+
+.submit-btn:hover {
+    background-color: #52b788;
+}
+
+
+.footer {
+    background-color: #000000;
+    color: #ffffff;
+    padding: 20px 0;
+    text-align: center;
+    font-size: 14px;
+}
+
+.social-media-icons {
+    margin-bottom: 10px;
+}
+
+.social-icon {
+    color: #ffffff;
+    margin: 0 10px;
+    font-size: 20px;
+    transition: color 0.3s;
+}
+
+.footer-bottom p {
+    margin: 5px 0;
+}
+
+.footer-bottom a {
+    color: #0077b5; /* LinkedIn Color */
+    text-decoration: none;
+    transition: color 0.3s;
+}
+
+.footer-bottom a:hover {
+    color: #005582;
+}
+
+
+.section-team {
+    padding: 60px 20px;
+    background-color: #f5f5f5;
+  }
+  
+  .section-team h2 {
+    color: #2d6a4f;
+    font-size: 42px;
+    font-weight: bold;
+    margin-bottom: 30px;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.1);
+    padding-left: 50px;
+  }
+  
+  .section-team p {
+    color: #434242;
+    font-size: 18px;
+    line-height: 1.6;
+    text-align: center;
+    margin-bottom: 20px;
+    width: 70%; /* Ensure the text takes up 60% of the width */
+    margin-left: auto;
+    margin-right: auto;
+  }
+  
+  .team-cards {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 20px;
+  }
+  
+  .team-member {
+    width: 300px;
+    text-align: center;
+    background: #fff;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    overflow: hidden;
+  }
+  
+  .team-img img {
+    width: 200px;
+    height: 200px;    
+    min-width: 200px;
+    min-height: 200px;
+    border-radius: 50%;
+    border: none;
+    margin-bottom: 15px;
+  }
+  
+  .team-info {
+    padding: 20px;
+  }
+  
+  .team-info h6 {
+    font-size: 1.5em;
+    margin-bottom: 10px;
+    color: #333;
+  }
+  
+  .team-info p {
+    font-size: 1em;
+    color: #666;
+    margin: 5px 0;
+  }
+  
+  @media (max-width: 768px) {
+    .team-member {
+      width: 90%;
+    }
+  }
+  
