--- a/styles.css
+++ b/styles.css
@@ -138,19 +138,19 @@ nav {
 
 .main-body-p{
     position: absolute;
-    top:51%;
+    top:53%;
     left:11%;
     color: #00412e;
     font-size: 25px;
     text-decoration: none;
     font-weight: bold;
     background-color: rgba(255, 255, 255, 0.5);
-    padding:5px;
+    padding:10px 5px;
 }
 
 .main-body-des{
     position: absolute;
-    top:58%;
+    top:61%;
     left:11%;
     color: #dfdfdf;
     font-size: 20px;
@@ -161,7 +161,7 @@ nav {
 
 .main-body-btn{
     position: absolute;
-    top:75%;
+    top:79%;
     left:11%;
     color: #cdcdcd;
     font-size: 20px;
@@ -383,62 +383,7 @@ h2{
     margin: 20px auto;
     width: 85%;
 }
-/* 
-.unique-section {
-    width: 100vw;
-    padding: 60px 150px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-}
 
-.unique-card-container {
-    display: flex;
-    width: 100%;
-    margin-bottom: 10px;
-    justify-content: space-between;
-    align-items: center;
-}
-.unique-rect-card {
-    width: 30%;
-    height: 300px;
-    background-color: #2d6a4f;
-    color: #fff;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 24px;
-    text-align: center;
-}
-
-.unique-square-cards {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    width: 35%;
-    height: 300px;
-    margin:0 10px;
-}
-
-.unique-square-card {
-    height: calc(50% - 10px);
-    background-color: #dadada;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 18px;
-    color: #333;
-    margin-bottom: 10px;
-    text-align: center;
-}
-
-.unique-square-card:last-child {
-    margin-bottom: 0;
-} */
-
-
-/* Container for the entire section */
 .unique-section {
     width: 100vw;
     padding: 60px 150px;
@@ -468,6 +413,8 @@ h2{
     align-items: center;
     justify-content: center;
     text-align: center;
+    margin: 0 5px;
+
 }
 
 .unique-rect-card:hover {
@@ -486,7 +433,7 @@ h2{
     justify-content: space-between;
     width: 35%;
     height: 300px;
-    margin: 5px 10px;
+    margin: 0 5px;
 }
 
 /* Style for each square card */
@@ -606,6 +553,7 @@ h2{
     flex-wrap: wrap;
     justify-content: center;
     gap: 2%;
+    height:670px;
 }
 
 .mentors {
@@ -616,6 +564,7 @@ h2{
     width: 22%;
     text-align: center;
     transition: transform 0.3s;
+    max-height:100%;
 }
 
 .mentors:hover {
@@ -625,6 +574,7 @@ h2{
 .mentor-img img {
     width: 100%;
     height: 280px;
+    max-height: 280px;
     object-fit: cover;
 }
 
@@ -634,7 +584,8 @@ h2{
     flex-direction: column;
     align-items: center;
     text-align: center;
-    min-height: 400px;
+    max-height: 42%;
+    min-height: 42%;
 }
 
 .mentor-txt h6 {
@@ -713,7 +664,7 @@ h2{
 }
 
 .section7{
-    width: 100vw;
+    width:100vw;
     padding: 50px;
     background-color: #ffffff;
 }
@@ -740,7 +691,7 @@ h2{
 }
 
 .photo-gallery {
-    padding: 50px;
+    padding:50px;
     background-color: #ffffff;
 }
 
@@ -755,11 +706,13 @@ h2{
     display: flex;
     justify-content: center;
     align-items: center;
+    margin:5px;
+
 }
 
 .hexagon {
     position: relative;
-    width: 350px;
+    width: 320px;
     height: 300px;
     overflow: hidden;
     transition: transform 0.3s ease, box-shadow 0.3s ease;
@@ -1081,6 +1034,7 @@ h2{
   
 
 .section-team {
+    width:100vw;
     padding: 60px 20px;
     background-color: #f5f5f5;
 }
@@ -1134,6 +1088,8 @@ h2{
     overflow: hidden;
     text-align: center;
     transition: transform 0.3s;
+    height:620px;
+    max-height: 620px;
 }
 
 .team-img img {
@@ -1259,7 +1215,7 @@ h2{
 
 .section9 {
     padding: 60px 20px;
-    background-color: #ffffff;
+    background-color: #e5e5e5;
 }
 
 .section9 h2 {
@@ -1297,6 +1253,7 @@ h2{
     width: 22%;
     text-align: center;
     transition: transform 0.3s;
+    max-height:590px;
 }
 
 .volunteer-img img {
