--- a/about.css
+++ b/about.css
@@ -41,7 +41,7 @@ html,body{
     left:0;
     height:100%;
     width:100%;
-    background-image:url("/images/about.jpeg");
+    background-image:url("about.jpeg");
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
