--- a/about.css
+++ b/about.css
@@ -19,6 +19,62 @@ html,body{
     position: absolute;
 }
 
+nav {
+    flex: 1;
+    text-align: right;
+    padding:25px 0;
+}
+
+.nav-links {
+    list-style: none;
+    display: flex;
+    justify-content: flex-end;
+    gap:20px;
+}
+
+.nav-links li {
+    margin-left: 20px;
+}
+
+.nav-links a {
+    color:#ffffff;
+    text-decoration: none;
+    font-weight: bold;
+    transition: color 0.3s;
+    font-size: large;
+}
+
+.nav-links a:hover {
+    color: #00b381;
+}
+
+.underline{
+    width:155px;
+    height:5px;
+    margin:2px 0;
+    background-color: #ffffff;
+}
+
+@media (max-width: 768px) {
+    .nav-links {
+        display: none;
+    }
+
+    .container {
+        flex-direction: column;
+        align-items: flex-start;
+    }
+
+    nav {
+        width: 100%;
+        text-align: left;
+    }
+
+    .logo {
+        margin-bottom: 1rem;
+    }
+}
+
 .introduction{
     /* background-image:url("/images/about.jpeg");
     background-repeat: no-repeat;
