--- a/css-page/mission-vision.css
+++ b/css-page/mission-vision.css
@@ -6,7 +6,6 @@
 }
 
 
-
 html {
   overflow-x:hidden; /* Prevent horizontal scrolling */
 }
@@ -26,23 +25,13 @@ header {
 }
 
 .top {
-  position: relative; /* Added to allow pseudo-element */
+  position: relative;
   width: 100vw; 
   height:100vh; 
+  background: url('../G1.JPG') no-repeat center center/cover;
 }
 
-/* Added pseudo-element to apply brightness only to the background */
-.top::before {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: url('../img/village-cleaner.webp') no-repeat center center/cover;
-  filter: brightness(0.5); /* Apply brightness to the background */
-  z-index: -1; /* Place the background behind the text */
-}
+
 
 .logo {
   display: flex;
